syntax = "proto3";

message FulfilmentMessages {
    oneof fulfilmentMessage {
        StockCorrected stockCorrected = 1;
    }
}

message StockCorrected {
    string productID = 1;
    int64 quantityChange = 2;
}
